0034 UltiReplicatorG
 * Recognization of M115 commands
 * Updated t0 to t1 tolerance code
 * Fixed several problems with reprap5D
 * Made a new Ultimaker scene
 * Support for Marlin build 3 & V1
 * Native Slic3r support

0033 ReplicatorG
* Updated version number to avoid confusion
* Minor UI changes

0032 ReplicatorG 
* Extensive polishing of ReplicatorG
* Set various settings as the new default, such as Skeinforge47, etc

0031 ReplicatorG
* Updated start and end gcode
* Fixed dual extrusion bugs
* Full support for skeinforge 47

0031_Beta ReplicatorG
* Extensive Rewrite of RepG to support The Replicator
* Post Processing of Skeinforge changes added
* Start and end gcode can now be specified from machines/*.xml
* Dualstrusion refactored, Wipes are not currently supported
* Estimator and safety checks pulled into different thread
* Improved UI for safety checker  
* Machine Onboard Parameters and Toolhead Onboard Parameters merged
* New GCode for new Replicator FUNctionality! M70-M73
* Improved temperature polling
* GCode now prepended with some meta-info

0030_CES ReplicatorG
* packaged for CES

0029_r2 ReplicatorG
* Fixed problem with Raft in Print-O-Matic settings

0029 ReplicatorG
* Fixed problem with Raft in Print-O-Matic settings
* Fixed some OnboardPreferences Abstraction
* Added defaults reset button for Print-O-Matic
* Updated and simplified some international number parsing
* Updated Opboard Parameters dialog
* Updated hardcoded defaults for Print-O-Matic
* Added data to start.gcode and wipe to help users modify 
* Changed handling of JFormattedTextField

0028 ReplicatorG
* Fixed toolhead setting function to work with new and old firmware
* Improvements to localization of decimal numbers
* Fixed preferences window, only one can be open at any time
* Fixed description of wipes in Dualstrusion window
* Disabled 'swap toolhead' while build in progress
* Removed 'Print to SD' button because it was slow, buggy, and rarely used